tests/integrations/json-basic-fail/tests/actual_tests/pattern_too_many_arrow.rs
fn main() {
    use_unit(1_u32);
    //~^^^^^^^ ERROR: mismatched types
}

fn use_unit(_: ()) {}
